# labs

./: README.md
1-5/: 2.1.cpp  4.1.cpp  4.2.cpp  4.3.cpp  5.2.cpp
Practises/: 2.cpp  6.cpp  input.txt  output.txt
lab-6/: CMakeLists.txt
lab-6/src/: Calculate.cpp
lab-7/: CMakeLists.txt  output.txt
lab-7/src/: Read.cpp
lab_10/: main.cpp
lab_9/: CMakeLists.txt  main.cpp
s1/1-5/: 1.cpp  2.2.cpp  3.cpp  4.1.cpp  5.1.cpp  CMakeLists.txt
s1/Practises/: 5.cpp  CMakeLists.txt  main.cpp
s1/lab-6/include/: Calculate.h
s1/lab-6/src/: Write.cpp
s1/lab-7/: input.txt  main.cpp
s1/lab-7/include/: Read.h  Write.h
s1/lab_11/: README.md
s1/lab_8/: main.cpp
